--- a/Makefile.redhat
+++ b/Makefile.redhat
@@ -4,3 +4,6 @@ include ./Makefile
 
 $(GOLANGCI_LINT):
 	(cd /; GO111MODULE=on go get -u github.com/golangci/golangci-lint/cmd/golangci-lint@master)
+
+.PHONY: lint
+lint: test-style
