--- a/openshift-ci/Dockerfile.tests
+++ b/openshift-ci/Dockerfile.tests
@@ -17,6 +17,7 @@ RUN yum install -y --quiet --setopt=skip_missing_names_on_install=False \
     git \
     make \
     gcc \
+    rh-python36 \
     && yum clean all
 
 WORKDIR /tmp
@@ -30,6 +31,8 @@ RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s
 RUN mkdir -p ${GOPATH}/src/${GO_PACKAGE_PATH}/
 
 WORKDIR ${GOPATH}/src/${GO_PACKAGE_PATH}
+
+RUN git clone https://github.com/ldimaggi/acceptance-testing.git
 
 COPY . .
 
