--- a/openshift-ci/Dockerfile.tests
+++ b/openshift-ci/Dockerfile.tests
@@ -9,10 +9,9 @@ ENV GIT_COMMITTER_EMAIL     devtools@redhat.com
 ENV LANG                    en_US.utf8
 
 ENV GOPATH                  /go
-ENV GOROOT                  /opt/go
 ENV GOCACHE                 /tmp/.gocache
 
-ENV PATH                    $GOPATH/bin:$GOROOT/bin:$PATH
+ENV PATH                    $GOPATH/bin:/usr/local/go/bin:$PATH
 
 RUN yum install -y --quiet --setopt=skip_missing_names_on_install=False \
     git \
@@ -23,9 +22,9 @@ RUN yum install -y --quiet --setopt=skip_missing_names_on_install=False \
 
 WORKDIR /tmp
 
-RUN mkdir -p $GOPATH/bin $GOROOT $GOCACHE
+RUN mkdir -p $GOPATH/bin $GOCACHE
 
-RUN curl -Lo go.tar.gz https://dl.google.com/go/go$GO_VERSION.linux-amd64.tar.gz && tar -xf go.tar.gz -C / && rm -vf go.tar.gz
+RUN curl -Lo go.tar.gz https://dl.google.com/go/go$GO_VERSION.linux-amd64.tar.gz && tar -xf go.tar.gz -C /usr/local && rm -vf go.tar.gz
 
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl $GOPATH/bin/
 
@@ -35,6 +34,6 @@ WORKDIR ${GOPATH}/src/${GO_PACKAGE_PATH}
 
 COPY . .
 
-RUN chmod -R go+wr $GOPATH $GOROOT $GOCACHE
+RUN chmod -R go+wr $GOPATH $GOCACHE
 
 ENTRYPOINT [ "/bin/bash" ]
