--- a/openshift-ci/Dockerfile.tests
+++ b/openshift-ci/Dockerfile.tests
@@ -1,4 +1,4 @@
-FROM registry.redhat.io/ubi8/ubi:latest
+FROM registry.access.redhat.com/ubi8/ubi:latest
 
 ARG GO_PACKAGE_PATH=github.com/redhat-developer/helm
 ARG GO_VERSION=1.13.8
