--- a/openshift-ci/Dockerfile.tests
+++ b/openshift-ci/Dockerfile.tests
@@ -6,7 +6,7 @@ ARG GO_VERSION=1.13.8
 ENV GIT_COMMITTER_NAME      devtools
 ENV GIT_COMMITTER_EMAIL     devtools@redhat.com
 
-ENV LANG                    en_US.utf8
+ENV LANG                    C.UTF-8
 
 ENV GOPATH                  /go
 ENV GOCACHE                 /tmp/.gocache
@@ -17,7 +17,8 @@ RUN yum install -y --quiet --setopt=skip_missing_names_on_install=False \
     git \
     make \
     gcc \
-    rh-python36 \
+    python36 \
+    python3-virtualenv \
     && yum clean all
 
 WORKDIR /tmp
@@ -28,14 +29,18 @@ RUN curl -Lo go.tar.gz https://dl.google.com/go/go$GO_VERSION.linux-amd64.tar.gz
 
 RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && chmod +x kubectl && mv kubectl $GOPATH/bin/
 
+RUN curl -Lo /usr/local/bin/kind https://github.com/kubernetes-sigs/kind/releases/download/v0.7.0/kind-$(uname)-amd64 && chmod +x /usr/local/bin/kind
+
 RUN mkdir -p ${GOPATH}/src/${GO_PACKAGE_PATH}/
 
 WORKDIR ${GOPATH}/src/${GO_PACKAGE_PATH}
 
-RUN git clone https://github.com/ldimaggi/acceptance-testing.git
-
 COPY . .
 
+RUN git clone --depth=1 https://github.com/ldimaggi/acceptance-testing.git
+
 RUN chmod -R go+wr $GOPATH $GOCACHE /etc/passwd /etc/group
+
+RUN make build
 
 ENTRYPOINT [ "/bin/bash" ]
