helm onboarding to openhsift ci
Signed-off-by: Kartikey Mamgain <mamgainkartikey@gmail.com>

--- a/openshift-ci/Makefile
+++ b/openshift-ci/Makefile
@@ -9,6 +9,9 @@ export ACCEPTANCE_DIR := $(CURDIR)/acceptance-testing
 export ACCEPTANCE_RUN_TESTS := repos.robot
 export ROBOT_HELM_V3 := 1
 export ROBOT_DEBUG_LEVEL := 3
+export ROBOT_RUN_TESTS=.
+export ROBOT_HELM_PATH=/usr/bin
+export ROBOT_OPTS=--xunit=results.xml
 
 
 .PHONY: test-completion
