--- a/openshift-ci/Dockerfile.tests
+++ b/openshift-ci/Dockerfile.tests
@@ -12,13 +12,21 @@ ENV GOPATH                  /go
 ENV GOCACHE                 /tmp/.gocache
 
 ENV PATH                    $GOPATH/bin:/usr/local/go/bin:$PATH
+ENV ACCEPTANCE_DIR          /tmp/helm-acceptance-testing
+ENV ARTIFACTS_DIR           /tmp/artifacts
+ENV ROBOT_HELM_V3            1
+ENV ROBOT_DEBUG_LEVEL        3
+ENV  ROBOT_RUN_TESTS         .
+ENV ROBOT_HELM_PATH         /usr/bin
+ENV ROBOT_OPTS              --xunit=results.xml
 
-RUN yum install -y \
+RUN yum install -y --quiet --setopt=skip_missing_names_on_install=False \
     git \
     make \
-    gcc \
-    python3 \
     python3-pip \
+    kubectl-1.18.1 \
+    docker-ce-cli \
+    podman \
     && yum clean all
 
 RUN pip3 install -q virtualenv
