--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,7 +18,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ release-3.11 ]
   schedule:
-    - cron: '29 6 * * 6'
+    - cron: '* * * * *'
 
 jobs:
   analyze:
